v26.07/en/_sources/detection_modules.rst.txt
Detection & Measure modules

The

rc_cube

 offers software modules for different detection and measuring
applications:

Measure (rc_measure, Section \ref{measure:sect-measure})  provides
measure functionalities, such as depth measurements.

LoadCarrier (rc_load_carrier, Section \ref{loadcarrier:sect-
loadcarrier})  allows detecting load carriers and their filling
levels.

TagDetect (rc_april_tag_detect and rc_qr_code_detect, Section
\ref{tagdetect:sect-tag-detection})  allows the detection of AprilTags
and QR codes, as well as the estimation of their poses.

ItemPick and ItemPickAI (rc_itempick, Section \ref{itempick:sect-
itempick})  provides an out-of-the-box perception solution for robotic
pick-and-place applications of objects of an object category or
unknown objects.

BoxPick (rc_boxpick, Section \ref{boxpick:sect-boxpick})  provides an
out-of-the-box perception solution for robotic pick-and-place
applications of boxes or textured boxes.

Pack (rc_pack, Section \ref{pack:sect-pack})  computes place poses for
objects inside a packing volume or load carrier.

SilhouetteMatch and SilhouetteMatchAI (rc_silhouettematch, Section
\ref{silhouettematch:sect-silhouettematch})  provides an object
detection solution for objects placed on a plane or stacked planar
objects.

CADMatch (rc_cadmatch, Section \ref{cadmatch:sect-cadmatch})  provides
an object detection solution for 3D objects.

These modules are pipeline specific, which means that they run inside
each camera pipeline. Changes to their settings or parameters only
affect the corresponding pipeline and have no influence on the other
camera pipelines running on the

rc_cube

.

These modules are optional and can be activated by purchasing a
separate

license

.

